@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Performance: Replaced "OrthancPluginRegisterRestCallback" by "OrthancPluginRegisterRestCallbackNoLock"
+
 
 Version 2.5 (2019-02-27)
 ========================
